@@ -1,3 +1,14 @@
+2004-03-23  lav
+
+	* edit.h: define _XOPEN_SOURCE_EXTENDED; prototype for IsAlNumAt.
+	* inline.h: don't use register; (IsAlNumRel, IsAlNumLeft) new functions.
+	* kern.cc: implement IsAlNumAt; use it in GetWord.
+	* mb.cc, mb.h: protect from including multiple times; define mb_mode
+	  to false if not USE_MULTIBYTE_CHARS.
+	* screen.cc: display control chars properly in mb_mode.
+	* textpoin.cc: fix endless loop.
+	* user.cc: fix word ops in mb_mode.
+
 2004-03-22  lav
 
 	* mb.cc, mb.h: new files.
